feat: toriiclient c# wrapper

--- a/bindings/config-generate-cs.json
+++ b/bindings/config-generate-cs.json
@@ -4,5 +4,6 @@
     "namespaceName": "dojo_namespace",
     "className": "dojo",
     "isEnabledFileScopedNamespace": false,
-    "isEnabledLibraryImport": true
+    "isEnabledLibraryImport": true,
+    "isEnabledFunctionPointers": false
 }
