--- a/Packages/Dojo/Runtime/bindings/config-generate-cs.json
+++ b/Packages/Dojo/Runtime/bindings/config-generate-cs.json
@@ -2,7 +2,7 @@
   "inputFilePath": "./ast/cross-platform.json",
   "outputFileDirectory": "./client",
   "namespaceName": "dojo_bindings",
-  "libraryName": "libtorii_c",
+  "libraryName": "torii_c",
   "className": "dojo",
   "isEnabledFileScopedNamespace": false,
   "isEnabledLibraryImport": false,
