--- a/Bindings/config-extract-macos.json
+++ b/Bindings/config-extract-macos.json
@@ -1,5 +1,5 @@
 {
-  "inputFilePath": "./dojo.h",
+  "inputFilePath": "./dojo.c/dojo.h",
   "platforms": {
     "aarch64-apple-darwin": {},
     "x86_64-apple-darwin": {}
