feat: libp2p, wasm ios and git lfs for libs

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 .DS_Store
+
+# builds
+dojo-webgl
+dojo-ios
+dojo-macos
+dojo-windows
