--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 Assets/WebGLTemplates/TemplateData/* linguist-vendored
+*.dll filter=lfs diff=lfs merge=lfs -text
+*.a filter=lfs diff=lfs merge=lfs -text
