fix: binary builds for macos and windows

--- a/Bindings/config-generate-cs.json
+++ b/Bindings/config-generate-cs.json
@@ -2,7 +2,7 @@
   "inputFilePath": "./ast/cross-platform.json",
   "outputFileDirectory": "../Assets/Dojo/Runtime/bindings/client",
   "namespaceName": "dojo_bindings",
-  "libraryName": "dojo_c",
+  "libraryName": "libdojo_c",
   "className": "dojo",
   "isEnabledFileScopedNamespace": false,
   "isEnabledLibraryImport": false,
