--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,7 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Dojo.sln",
+    "dotnet.defaultSolution": "dojounity.sln",
     "rust-analyzer.linkedProjects": [
         "./Bindings/dojo.c/Cargo.toml"
     ]
