fix: get_transform must be ran in main thread

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,7 @@
     },
     "dotnet.defaultSolution": "Dojo.sln",
     "rust-analyzer.linkedProjects": [
+        "./Bindings/dojo.c/Cargo.toml",
         "./Bindings/dojo.c/Cargo.toml"
     ]
 }
