--- a/Assets/WebGLTemplates/Dojo/TemplateData/dojo.js/package.json
+++ b/Assets/WebGLTemplates/Dojo/TemplateData/dojo.js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dojo-c",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0-rc.0",
   "files": [
     "dojo_c_bg.wasm",
     "dojo_c.js",
