--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,11 +74,15 @@ jobs:
       - name: Check C# Formatting
         run: |
           FOUND_ERROR=0
+          cd $GITHUB_WORKSPACE
           for proj in $(find . -name "*.csproj"); do
             echo "Checking format for $proj"
-            if ! dotnet format --verify-no-changes "$proj"; then
+            DIR=$(dirname "$proj")
+            cd "$DIR"
+            if ! dotnet format --verify-no-changes "$(basename "$proj")"; then
               echo "Found formatting issues in $proj"
               FOUND_ERROR=1
             fi
+            cd $GITHUB_WORKSPACE
           done
           exit $FOUND_ERROR
