--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,12 +77,10 @@ jobs:
           echo "Directory contents:"
           ls -la
           
-          EXIT_CODE=0
-          while IFS= read -r file; do
+          for file in $(find . -name "*.cs" -not -path "*/Library/*" -not -path "*/Temp/*"); do
             echo "Checking format for: $file"
-            if ! dotnet format --verify-no-changes "$file"; then
+            if ! dotnet format --verify-no-changes --include "$file"; then
               echo "❌ Formatting issues found in $file"
-              EXIT_CODE=1
+              exit 1
             fi
-          done < <(find . -name "*.cs" -not -path "*/Library/*" -not -path "*/Temp/*")
-          exit $EXIT_CODE
+          done
