--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,55 +7,55 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+#   test:
+#     name: Run Tests
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
 
-       # Git LFS
-      - name: Create LFS file list
-        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+#        # Git LFS
+#       - name: Create LFS file list
+#         run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
 
-      - name: Restore LFS cache
-        uses: actions/cache@v3
-        id: lfs-cache
-        with:
-          path: .git/lfs
-          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+#       - name: Restore LFS cache
+#         uses: actions/cache@v3
+#         id: lfs-cache
+#         with:
+#           path: .git/lfs
+#           key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
 
-      - name: Git LFS Pull
-        run: |
-          git lfs pull
-          git add .
-          git reset --hard
+#       - name: Git LFS Pull
+#         run: |
+#           git lfs pull
+#           git add .
+#           git reset --hard
 
-      # Cache
-      - uses: actions/cache@v3
-        with:
-          path: Library
-          key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-          restore-keys: |
-            Library-
+#       # Cache
+#       - uses: actions/cache@v3
+#         with:
+#           path: Library
+#           key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+#           restore-keys: |
+#             Library-
 
-      - name: Run Unity Tests
-        uses: game-ci/unity-test-runner@v4
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-        with:
-          projectPath: .
-          testMode: all
-          artifactsPath: TestResults
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Run Unity Tests
+#         uses: game-ci/unity-test-runner@v4
+#         env:
+#           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+#           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+#           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+#         with:
+#           projectPath: .
+#           testMode: all
+#           artifactsPath: TestResults
+#           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: Test Results
-          path: TestResults
+#       - name: Upload Test Results
+#         uses: actions/upload-artifact@v3
+#         if: always()
+#         with:
+#           name: Test Results
+#           path: TestResults
 
   format:
     name: Check Code Format
@@ -100,3 +100,29 @@ jobs:
       # Cleanup
       - name: Cleanup temporary files
         run: rm -rf _temp
+
+  lint:
+    name: Run Code Linting
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Download Unity
+        uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          targetPlatform: StandaloneLinux64
+
+      - name: Install dotnet tools
+        run: |
+          dotnet new tool-manifest
+          dotnet tool install JetBrains.ReSharper.GlobalTools
+
+      - name: Run ReSharper CLI inspection
+        run: |
+          jb inspectcode . --output=inspect-results.xml --severity=WARNING \
+            --include="Assets/**/*.cs" \
+            --exclude="**/Library/**/*.cs;**/Temp/**/*.cs;**/obj/**/*.cs"
