--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 Assets/WebGLTemplates/TemplateData/* linguist-vendored
 *.dll filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
+*.bundle filter=lfs diff=lfs merge=lfs -text
+Assets/WebGLTemplates/Dojo/TemplateData/dojo.js/*.wasm filter=lfs diff=lfs merge=lfs -text
