--- a/.github/workflows/dojoc.yml
+++ b/.github/workflows/dojoc.yml
@@ -9,7 +9,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   RUST_VERSION: 1.85.0 # Match the version in release.yml
-  DOTNET_VERSION: '8.0.x' # Assuming .NET 8 for binding tools
+  DOTNET_VERSION: '8.0.300' # Specify exact SDK version
 
 jobs:
   generate_bindings:
@@ -68,7 +68,7 @@ jobs:
 
       # Assuming the tools need to be built
       - name: Build CAstFfi.Tool
-        run: dotnet build ./CAstFfi/src/cs/production/CAstFfi.Tool/CAstFfi.Tool.csproj -c Release # Adjust path/command if needed
+        run: dotnet build ./CAstFfi/src/cs/production/CAstFfi.Tool/CAstFfi.Tool.csproj -c Release /p:NoWarn=CA1515 # Suppress internal type warning
 
       - name: Build C2CS.Tool
         run: dotnet build ./c2cs/src/cs/production/C2CS.Tool/C2CS.Tool.csproj -c release # Adjust path/command if needed
