--- a/Assets/WebGLTemplates/Dojo/TemplateData/dojo.js/package.json
+++ b/Assets/WebGLTemplates/Dojo/TemplateData/dojo.js/package.json
@@ -1,15 +1,11 @@
 {
   "name": "dojo-c",
-  "type": "module",
   "version": "1.5.0",
   "files": [
     "dojo_c_bg.wasm",
     "dojo_c.js",
     "dojo_c.d.ts"
   ],
-  "main": "dojo_c.js",
-  "types": "dojo_c.d.ts",
-  "sideEffects": [
-    "./snippets/*"
-  ]
+  "browser": "dojo_c.js",
+  "types": "dojo_c.d.ts"
 }
