chore: bump version to 1.7.0-alpha.5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "org.dojoengine.dojo",
-  "version": "1.3.0",
+  "version": "1.7.0-alpha.5",
   "displayName": "Dojo",
   "unity": "2019.1",
   "keywords": [
